--- a/text/footer.html
+++ b/text/footer.html
@@ -1,11 +1,11 @@
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
     <div class="footer bg-primary">
-        <a href="/monthlyspending.html"><img src="/images/calendar2.png" alt="transaction history"></a>
-        <a href="/addtransaction.html"><img src="/images/plus.png" alt=" add transaction"></a>
-        <a href="/setbudget.html"> <img src="/images/money.png" alt="set budget"></a>
+        <a href="monthlyspending.html"><img src="/images/calendar2.png" alt="transaction history"></a>
+        <a href="addtransaction.html"><img src="/images/plus.png" alt=" add transaction"></a>
+        <a href="setbudget.html"> <img src="/images/money.png" alt="set budget"></a>
     </div>
 
 </footer>
