--- a/text/template.html
+++ b/text/template.html
@@ -35,7 +35,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 
 </head>
 
@@ -43,44 +43,6 @@
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
-    <nav id="navbarPlaceholder"></nav>
-    <br>
-    <div class="logo">
-        <img src="/images/CraveControlBlueLogo.png" alt="Crave Control" />
-    </div>
-    <br>
-
-    <!-- the body of your page goes here -->
-    <!-- stuff -->
-    <!--The back button of the page that leads to the previous page-->
-    <div class="back-button">
-        <a href="javascript:history.go(-1)">
-            <img id="back-button-image" src="https://cdn-icons-png.flaticon.com/512/93/93634.png"
-                alt="Back button image">
-        </a>
-    </div>
-
-    <!--How much you spent this year message-->
-    <div id="money-yearly-report">
-        <h2>How much you spent this year</h2>
-        <h2>(number)</h2>
-    </div>
-    <br>
-
-    <!-- Container for the graph image -->
-    <div class="yearly-graph-container">
-        <img src="images/graph.png" alt="Graph" class="graph-image">
-    </div>
-
-    <!-- Container for the top 3 spendings -->
-    <div class="top-yearly-spendings-container">
-        <h3>Top 3 Spendings So Far</h3>
-        <ul id="top-yearly-spending-list">
-            <li id="top-yearly-spending-1">Top spending 1</li>
-            <li id="top-yearly-spending-2">Top spending 2</li>
-            <li id="top-yearly-spending-3">Top spending 3</li>
-        </ul>
-    </div>
 
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
@@ -88,17 +50,15 @@
     <!-- the body of your page goes here -->
     <!-- stuff -->
 
-    <!-- Footer will be inserted here -->
+    <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
-
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_BBY20.js"></script>
-    <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/yearlyreport.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
+    <script src="../scripts/firebaseAPI_BBY20.js"></script>
+    <script src="../scripts/skeleton.js"></script>
+    <!-- <script src="../scripts/script.js"></script> -->
 
 </body>
 
