--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1>Welcome to</h1>
         <img class="responsive" src="/images/CraveControlBlueLogo.png" alt="">
         <br><br>
-        <a href="login.html" class="button bg-primary" type="button">Login</a>
+        <a href="text/login.html" class="button bg-primary" type="button">Login</a>
     </div>
 
     <!-- our own footer goes here-->
