--- a/text/addtransaction.html
+++ b/text/addtransaction.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Crave Control</title>
     <meta name="comp1800 project" content="My 1800 App">
-
     <!------------------------>
     <!-- Required meta tags -->
     <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!------------------------------------------>
     <!-- Bootstrap Library CSS JS CDN go here -->
     <!------------------------------------------>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -30,62 +23,39 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
-
-</head>
-
-<body>
+    <link rel="stylesheet" href="../styles/style.css">
+  </head>
+  <body>
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
-
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
-
-    <!--The back button of the page that leads to the previous page-->
-<div class="back-button">
-    <a href="javascript:history.go(-1)">
-      <img id="back-button-image" src="https://cdn-icons-png.flaticon.com/512/93/93634.png" alt="Back button image">
-    </a>
-  </div>
     <!-- the body of your page goes here -->
     <!-- stuff -->
-    <div id="transactionform">
-
-        <h1><u>Create A Transaction</u></h1>
-        <p>Date</p>
-        <input type="date" id="transdate" placeholder="date">
-        <br><br>
-        <p>Description</p>
-        <input id="transdescription" placeholder="resturant name">
-        <br><br>
-        <p>Amount</p>
-        <p>$<input type="number" id="transamount" placeholder="0.00"></p>
-        <br>
-        <p>Category</p>
-        <input id="transcategory" placeholder="category">
-        <br><br>
-
-        <!--This add transaction button, This calls the add transaction function in transaction.js-->
-        <a class="button bg-primary" type="button" onclick="addTransaction()">Add Transaction</a>
+    <br>
+    <br>
+    <br>
+    <div id="addtrans">
+      <h1>Are you eating out today?</h1>
     </div>
-
+    <br>
+    <div id="yesno">
+      <a href="transaction.html" class="button bg-primary" type="button" onclick="saveTransactionAndRedirect()">YES</a>
+      <a href="congrats.html" class="button bg-primary" type="button">NO</a>
+    </div>
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
-
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_BBY20.js"></script>
-    <script src="./scripts/skeleton.js"></script>
-    <script src="./scripts/transaction.js"></script>
+    <script src="../scripts/firebaseAPI_BBY20.js"></script>
+    <script src="../scripts/skeleton.js"></script>
+    <script src="../scripts/transaction.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
-
-</body>
-
+  </body>
 </html>
