--- a/text/main.html
+++ b/text/main.html
@@ -5,21 +5,17 @@
     <title>Crave Control</title>
     <meta name="comp1800 project" content="My 1800 App">
 
-    <!------------------------>
     <!-- Required meta tags -->
-    <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!------------------------------------------>
-    <!-- Bootstrap Library CSS JS CDN go here -->
-    <!------------------------------------------>
+    <!-- Bootstrap Library CSS CDN go here -->
+    <!-- Boostrap Library JS CDN  go here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
         </script>
-
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -35,7 +31,9 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
+
+
 
 </head>
 
@@ -44,26 +42,43 @@
     <!-- Your HTML Layout go here -->
     <!------------------------------>
 
-    <!-- our own navbar goes here -->
+    <!--Navigation bar-->
     <nav id="navbarPlaceholder"></nav>
 
-    <!-- the body of your page goes here -->
-    <!-- stuff -->
     <br>
-    <div id="transactionform">
-        <h1 id="congrats">Congrats on Saving! :)</h1>
-        <br>
-        <a href="monthlyspending.html" class="button bg-primary" type="button">Monthly History</a>
+
+    <div class="logo">
+        <img src="../images/CraveControlBlueLogo.png" alt="Crave Control" />
     </div>
 
-    <!-- our own footer goes here-->
+    <!--Welcome Back message-->
+    <div id="welcome-back">
+        <br>
+        <h2>Welcome Back</h2>
+        <h2 id="name-goes-here"></h2>
+    </div>
+
+    <!--Monthly Transactions message-->
+    <div id="monthly-transcations">
+        <br>
+        <br>
+        <h2 id="currentMonth"></h2>
+        <br>
+        <h2 id="monthly-budget-left"></h2>
+    </div>
+
+    <!-- Footer will be inserted here -->
     <nav id="footerPlaceholder"></nav>
+
+    <!-- JavaScript files -->
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_BBY20.js"></script>
-    <script src="./scripts/skeleton.js"></script>
+
+    <script src="../scripts/firebaseAPI_BBY20.js"></script>
+    <script src="../scripts/skeleton.js"></script>
+    <script src="../scripts/main.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
