--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
     <div class="container-fluid">
-        <img src="/images/CraveControlBlueLogo.png" height="36">
+        <img src="../images/CraveControlBlueLogo.png" height="36">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,13 +8,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="/main.html">Home</a>
+                    <a class="nav-link" href="main.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/profile.html">Profile</a>
+                    <a class="nav-link" href="profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/aboutus.html">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
             </ul>
             <div class="d-flex">
