--- a/text/setbudget.html
+++ b/text/setbudget.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Crave Control</title>
+  <head>
+    <title>Set Budget Page</title>
     <meta name="comp1800 project" content="My 1800 App">
-
     <!------------------------>
     <!-- Required meta tags -->
     <!------------------------>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!------------------------------------------>
     <!-- Bootstrap Library CSS JS CDN go here -->
     <!------------------------------------------>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-        </script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
@@ -30,36 +23,52 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/style.css">
-
-</head>
-
-<body>
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
-
-    <!-- our own navbar goes here -->
+    <link rel="stylesheet" href="../styles/style.css">
+  </head>
+  <body>
+    <!-- <div class="background">   -->
     <nav id="navbarPlaceholder"></nav>
-
-    <!-- the body of your page goes here -->
-    <!-- stuff -->
-
-    <!-- our own footer goes here-->
+    <br>
+    <div class="logo">
+      <img src="/images/CraveControlBlueLogo.png" alt="Crave Control" />
+    </div>
+    <br>
+    <!--The back button of the page that leads to the previous page-->
+    <div class="back-button">
+      <a href="javascript:history.go(-1)">
+        <img id="back-button-image" src="../images/Back button image.png" alt="Back button image">
+      </a>
+    </div>
+    <br>
+    <!--Set Button Page-->
+    <div id="set-budget-page">
+      <br>
+      <br>
+      <img id="edit-icon" src="../images/SetBudgetPageimage.png" alt="Edit-icon">
+      <br>
+      <!--Dollar amount input and message field-->
+      <h5 id="set-budget-text">Set Budget for the Month</h5>
+      <label id="amount-text">Amount $:</label>
+      <input type="number" id="amount-input" placeholder="50">
+      <br>
+      <br>
+      <!--Submit button-->
+      <button id="submit-button" onclick="divide()">Set</button>
+      <br>
+      <br>
+    </div>
+    <!-- Footer will be inserted here -->
     <nav id="footerPlaceholder"></nav>
-
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/firebaseAPI_BBY20.js"></script>
-    <script src="./scripts/skeleton.js"></script>
+    <script src="../scripts/firebaseAPI_BBY20.js"></script>
+    <script src="../scripts/skeleton.js"></script>
+    <script src="../scripts/setbudget.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
-
-</body>
-
+  </body>
 </html>
