All of the backend completed

--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
         <br>
         <h2 id="currentMonth"></h2>
         <br>
-        <img src="images/graph.png" id="landing-page-image">
+        <h2 id="monthly-budget-left"></h2>
     </div>
 
     <!-- Footer will be inserted here -->
