--- a/monthlyspending.html
+++ b/monthlyspending.html
@@ -55,46 +55,38 @@
     </a>
   </div>
 
+  <!--How much you spent this year message-->
+  <div id="money-spent-this-year">
+    <h2>How much you</h2>
+    <h2>spent this year:</h2>
+    <h2 id="yearly-spent"></h2>
+  </div>
+  <br>
+
   <!--The monthly spending message container-->
   <div class="monthly-spending-message-container">
     <!--Monthly Spending message-->
     <div id="monthly-spending">
       <h2>Your Monthly Spending</h2>
     </div>
-
-    <!--How much you spent this year message-->
-    <div id="money-spent-this-year">
-      <h2>How much you</h2>
-      <h2>spent this year:</h2>
-      <a href="yearlyreport.html">
-        <h2>(number)</h2>
-      </a>
-    </div>
-    <br>
-
-    <!--This is the compare button, at the moment it does not lead anywhere-->
-    <button class="compare-button">
-      <a href="comparemonths.html">
-        <h5>Compare Months</h5>
-      </a>
-    </button>
   </div>
 
   <!--This is the compare months button container-->
   <div class="months-container">
-    <a href="monthlyreport.html">January</a>
-    <a href="monthlyreport.html">February</a>
-    <a href="monthlyreport.html">March</a>
-    <a href="monthlyreport.html">April</a>
-    <a href="monthlyreport.html">May</a>
-    <a href="monthlyreport.html">June</a>
-    <a href="monthlyreport.html">July</a>
-    <a href="monthlyreport.html">August</a>
-    <a href="monthlyreport.html">September</a>
-    <a href="monthlyreport.html">October</a>
-    <a href="monthlyreport.html">November</a>
-    <a href="monthlyreport.html">December</a>
+    <p id="january-total-spent"></p>
+    <p id="february-total-spent"></p>
+    <p id="march-total-spent"></p>
+    <p id="april-total-spent"></p>
+    <p id="may-total-spent"></p>
+    <p id="june-total-spent"></p>
+    <p id="july-total-spent"></p>
+    <p id="august-total-spent"></p>
+    <p id="september-total-spent"></p>
+    <p id="october-total-spent"></p>
+    <p id="november-total-spent"></p>
+    <p id="december-total-spent"></p>
   </div>
+  
 
   <!-- our own footer goes here-->
   <nav id="footerPlaceholder"></nav>
@@ -104,6 +96,7 @@
   <!---------------------------------------------->
   <script src="./scripts/firebaseAPI_BBY20.js"></script>
   <script src="./scripts/skeleton.js"></script>
+  <script src="./scripts/monthlyspending.js"></script>
   <!-- <script src="./scripts/script.js"></script> -->
 </body>
 
